[package]
name = "helios-common"
version.workspace = true
edition = "2021"

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
revm.workspace = true
eyre.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
hex.workspace = true

[lints.rust]
warnings = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
