[package]
name = "helios-consensus-core"
version.workspace = true
edition = "2021"

[dependencies]
alloy.workspace = true
alloy-rlp = "0.3.12"
bls12_381.workspace = true
ssz_types.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
tree_hash_derive.workspace = true
tree_hash.workspace = true
typenum.workspace = true
sha2.workspace = true
eyre.workspace = true
serde.workspace = true
superstruct.workspace = true
thiserror.workspace = true
tracing.workspace = true
zduny-wasm-timer.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasmtimer = "0.4.1"

[dev-dependencies]
tokio.workspace = true
snap = "1"
serde_yaml.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[lints.rust]
warnings = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
