[package]
name = "helios-verifiable-api-types"
version.workspace = true
edition = "2021"

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true

# self crates
helios-common = { path = "../../common" }

[lints.rust]
warnings = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"
